packages/svelte/tests/validator/samples/inline-new-class-4/input.svelte
<script>
	function bar() {
		const a = new class Foo {
			foo = $state(0)
		}
	}
</script>
