packages/svelte/tests/compiler-errors/samples/runes-wrong-props-args/main.svelte
<script>
	const { foo } = $props(1);
</script>
